<resources>
    <string name="app_name">GameApp</string>
    <string name="button_addGame">Add Game</string>
    <string name="button_addImage">Add Image</string>
<string name="api_image">Image</string>
    <string name = "apiscreen">api</string>

    <string name="hint_gameTitle">Game Title</string>
    <string name="hint_gameGenre">Genre</string>

    <string name="hint_gameComment">Comment</string>

    <string name="menu_searchGame">Add</string>

    <string name="menu_addGame">Add</string>
    <string name="menu_cancelGame">Cancel</string>
    <string name="enter_game_title"> Please enter a game Title </string>
    <string name="save_game"> Save Game </string>

    <string name="select_game_image">Select game image</string>
    <string name="change_game_image">Change game image</string>
    <string name="game_image">game image</string>

    <string name="button_location">Set Location</string>
    <string name="title_activity_maps">Map</string>

    <string name="menu_deleteGame">Delete</string>
    <string name="GameApiTitle">GameApiTitle</string>
    <string name="released">released</string>


</resources>
